[api] refactor: wip.